Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1700,5 +1700,8 @@
   "pli-tv-kd11:35.1.138": "The bad view of Ariṭṭha, ",
   "pli-tv-kd11:35.1.139": "Was attached to because of ignorance; ",
   "pli-tv-kd11:35.1.140": "For not giving up a bad view, ",
+  "pli-tv-kd11:35.1.141": "Ejection was spoken of by the Victor. ",
+  "pli-tv-kd11:35.1.142": "The procedure of demotion, banishment, ",
+  "pli-tv-kd11:35.1.143": "Just so reconciliation; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
