--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1703,5 +1703,8 @@
   "pli-tv-kd11:35.1.141": "Ejection was spoken of by the Victor. ",
   "pli-tv-kd11:35.1.142": "The procedure of demotion, banishment, ",
   "pli-tv-kd11:35.1.143": "Just so reconciliation; ",
+  "pli-tv-kd11:35.1.144": "Not recognizing, not making amends, ",
+  "pli-tv-kd11:35.1.145": "And not giving up a view. ",
+  "pli-tv-kd11:35.1.146": "Frivolous, misconduct, he hurts, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
