Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1706,5 +1706,7 @@
   "pli-tv-kd11:35.1.144": "Not recognizing, not making amends, ",
   "pli-tv-kd11:35.1.145": "And not giving up a view. ",
   "pli-tv-kd11:35.1.146": "Frivolous, misconduct, he hurts, ",
+  "pli-tv-kd11:35.1.147": "And just wrong livelihood; ",
+  "pli-tv-kd11:35.1.148": "For the procedure of banishment, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
