Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1708,5 +1708,11 @@
   "pli-tv-kd11:35.1.146": "Frivolous, misconduct, he hurts, ",
   "pli-tv-kd11:35.1.147": "And just wrong livelihood; ",
   "pli-tv-kd11:35.1.148": "For the procedure of banishment, ",
+  "pli-tv-kd11:35.1.149": "There are these extra lines. ",
+  "pli-tv-kd11:35.1.150": "Stopping gain, disparaging, two, five, ",
+  "pli-tv-kd11:35.1.151": "They are called two sets of five; ",
+  "pli-tv-kd11:35.1.152": "For the procedure of reconciliation, ",
+  "pli-tv-kd11:35.1.153": "There are these extra lines. ",
+  "pli-tv-kd11:35.1.154": "Condemnation, and demotion, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
