Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1714,5 +1714,9 @@
   "pli-tv-kd11:35.1.152": "For the procedure of reconciliation, ",
   "pli-tv-kd11:35.1.153": "There are these extra lines. ",
   "pli-tv-kd11:35.1.154": "Condemnation, and demotion, ",
+  "pli-tv-kd11:35.1.155": "Are two procedures of the same kind; ",
+  "pli-tv-kd11:35.1.156": "Banishment, and reconciled, ",
+  "pli-tv-kd11:35.1.157": "There are extra lines. ",
+  "pli-tv-kd11:35.1.158": "Three procedures of ejection, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
