Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1718,5 +1718,6 @@
   "pli-tv-kd11:35.1.156": "Banishment, and reconciled, ",
   "pli-tv-kd11:35.1.157": "There are extra lines. ",
   "pli-tv-kd11:35.1.158": "Three procedures of ejection, ",
+  "pli-tv-kd11:35.1.159": "Are analyzed in the same way; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
