--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1720,5 +1720,6 @@
   "pli-tv-kd11:35.1.158": "Three procedures of ejection, ",
   "pli-tv-kd11:35.1.159": "Are analyzed in the same way; ",
   "pli-tv-kd11:35.1.160": "As with the method of condemnation, ",
+  "pli-tv-kd11:35.1.161": "One should understand the the rest of the procedures.” ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
