Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -7,9 +7,9 @@
   "pli-tv-kd12:1.1.2": "At that time the monks on probation consented to regular monks bowing down to them, standing up for them, raising their joined palms to them, doing acts of respect toward them, offering them a seat, offering them a bed, offering them water for washing their feet and a foot stool, offering them a foot scraper, receiving their bowl and robe, and massaging their backs when bathing. ",
   "pli-tv-kd12:1.1.3": "The monks of few desires complained and criticized them, ",
   "pli-tv-kd12:1.1.4": "“How can monks on probation consent to these things?” ",
-  "pli-tv-kd12:1.1.5": "The monks told the Buddha. ",
+  "pli-tv-kd12:1.1.5": "They told the Buddha. ",
   "pli-tv-kd12:1.1.6": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd12:1.1.7": "“Is it true, monks, that monks on probation consent to these things?” ",
+  "pli-tv-kd12:1.1.7": "“Is it true, monks, that the monks on probation are consenting to these things?” ",
   "pli-tv-kd12:1.1.8": "“It’s true, Sir.” ",
   "pli-tv-kd12:1.1.9": "The Buddha rebuked them … ",
   "pli-tv-kd12:1.1.10": "“It’s not suitable … ",
