Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -17,7 +17,7 @@
   "pli-tv-kd12:1.1.12": "This will affect people’s confidence …” ",
   "pli-tv-kd12:1.1.13": "After rebuking them … ",
   "pli-tv-kd12:1.1.14": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd12:1.1.15": "“A monk on probation should not consent to: ",
+  "pli-tv-kd12:1.1.15": "“A monk on probation shouldn’t consent to: ",
   "pli-tv-kd12:1.1.16": "Regular monks bowing down to him; ",
   "pli-tv-kd12:1.1.17": "Regular monks standing up for him; ",
   "pli-tv-kd12:1.1.18": "Regular monks raising their joined palms to him; ",
