--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -27,9 +27,9 @@
   "pli-tv-kd12:1.1.22": "Regular monks offering him water for washing his feet and a foot stool; ",
   "pli-tv-kd12:1.1.23": "Regular monks offering him a foot scraper; ",
   "pli-tv-kd12:1.1.24": "Regular monks receiving his bowl and robe; ",
-  "pli-tv-kd12:1.1.25": "Regular monks massaging his back when he is bathing. ",
+  "pli-tv-kd12:1.1.25": "Regular monks massaging his back when he’s bathing. ",
   "pli-tv-kd12:1.1.26": "If he consents to any of these, he commits an offense of wrong conduct. ",
-  "pli-tv-kd12:1.1.27": "Monks on probation should bow down to one another according to seniority, and likewise stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs according to seniority when bathing. ",
+  "pli-tv-kd12:1.1.27": "Monks on probation should do the following with one another according to seniority: bow down, stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs when bathing. ",
   "pli-tv-kd12:1.1.28": "Monks on probation should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:1.1.29": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:1.1.30": "And I will lay down the proper conduct for a monk on probation. ",
