Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -34,10 +34,10 @@
   "pli-tv-kd12:1.1.29": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:1.1.30": "And I will lay down the proper conduct for a monk on probation. ",
   "pli-tv-kd12:1.2.2": "This is the proper conduct: ",
-  "pli-tv-kd12:1.2.3": "He should not give the full ordination. ",
-  "pli-tv-kd12:1.2.4": "He should not give formal support. ",
-  "pli-tv-kd12:1.2.5": "He should not have a novice monk attend on him. ",
-  "pli-tv-kd12:1.2.6": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd12:1.2.3": "He shouldn’t give the full ordination. ",
+  "pli-tv-kd12:1.2.4": "He shouldn’t give formal support. ",
+  "pli-tv-kd12:1.2.5": "He shouldn’t have a novice monk attend on him. ",
+  "pli-tv-kd12:1.2.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:1.2.7": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:1.2.8": "He should not commit the same offense as the offense for which the Sangha gave him probation, nor one that is similar or worse. ",
   "pli-tv-kd12:1.2.9": "He should not criticize the legal procedure. ",
