Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -38,8 +38,8 @@
   "pli-tv-kd12:1.2.4": "He shouldn’t give formal support. ",
   "pli-tv-kd12:1.2.5": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd12:1.2.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
-  "pli-tv-kd12:1.2.7": "Even if appointed, he should not instruct the nuns. ",
-  "pli-tv-kd12:1.2.8": "He should not commit the same offense as the offense for which the Sangha gave him probation, nor one that is similar or worse. ",
+  "pli-tv-kd12:1.2.7": "Even if appointed, he shouldn’t instruct the nuns. ",
+  "pli-tv-kd12:1.2.8": "He shouldn’t commit the same offense as the offense for which the Sangha gave him probation, nor one that’s similar or worse. ",
   "pli-tv-kd12:1.2.9": "He should not criticize the legal procedure. ",
   "pli-tv-kd12:1.2.10": "He should not criticize those who did the procedure. ",
   "pli-tv-kd12:1.2.11": "He should not cancel the observance-day ceremony of a regular monk. ",
