--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -40,8 +40,8 @@
   "pli-tv-kd12:1.2.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:1.2.7": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd12:1.2.8": "He shouldn’t commit the same offense as the offense for which the Sangha gave him probation, nor one that’s similar or worse. ",
-  "pli-tv-kd12:1.2.9": "He should not criticize the legal procedure. ",
-  "pli-tv-kd12:1.2.10": "He should not criticize those who did the procedure. ",
+  "pli-tv-kd12:1.2.9": "He shouldn’t criticize the legal procedure. ",
+  "pli-tv-kd12:1.2.10": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:1.2.11": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:1.2.12": "He should not cancel the invitation of a regular monk. ",
   "pli-tv-kd12:1.2.13": "He shouldn’t direct a regular monk. ",
