Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -42,7 +42,7 @@
   "pli-tv-kd12:1.2.8": "He shouldn’t commit the same offense as the offense for which the Sangha gave him probation, nor one that’s similar or worse. ",
   "pli-tv-kd12:1.2.9": "He shouldn’t criticize the legal procedure. ",
   "pli-tv-kd12:1.2.10": "He shouldn’t criticize those who did the procedure. ",
-  "pli-tv-kd12:1.2.11": "He should not cancel the observance-day ceremony of a regular monk. ",
+  "pli-tv-kd12:1.2.11": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:1.2.12": "He should not cancel the invitation of a regular monk. ",
   "pli-tv-kd12:1.2.13": "He shouldn’t direct a regular monk. ",
   "pli-tv-kd12:1.2.14": "He should not make accusations against a regular monk. ",
