Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -43,10 +43,10 @@
   "pli-tv-kd12:1.2.9": "He shouldn’t criticize the legal procedure. ",
   "pli-tv-kd12:1.2.10": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:1.2.11": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd12:1.2.12": "He should not cancel the invitation of a regular monk. ",
+  "pli-tv-kd12:1.2.12": "He shouldn’t cancel the invitation of a regular monk. ",
   "pli-tv-kd12:1.2.13": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd12:1.2.14": "He should not make accusations against a regular monk. ",
-  "pli-tv-kd12:1.2.15": "He should not ask a regular monk for permission to accuse him of an offense. ",
+  "pli-tv-kd12:1.2.14": "He shouldn’t give instructions to a regular monk. ",
+  "pli-tv-kd12:1.2.15": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:1.2.16": "He should not accuse a regular monk of an offense. ",
   "pli-tv-kd12:1.2.17": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd12:1.2.18": "He should not associate inappropriately with other monks. ",
