--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -47,7 +47,7 @@
   "pli-tv-kd12:1.2.13": "He shouldn’t direct a regular monk. ",
   "pli-tv-kd12:1.2.14": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd12:1.2.15": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
-  "pli-tv-kd12:1.2.16": "He should not accuse a regular monk of an offense. ",
+  "pli-tv-kd12:1.2.16": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:1.2.17": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd12:1.2.18": "He should not associate inappropriately with other monks. ",
   "pli-tv-kd12:1.2.19": "He should not walk in front of a regular monk. ",
