Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -49,7 +49,7 @@
   "pli-tv-kd12:1.2.15": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:1.2.16": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:1.2.17": "He shouldn’t remind a regular monk of an offense. ",
-  "pli-tv-kd12:1.2.18": "He should not associate inappropriately with other monks. ",
+  "pli-tv-kd12:1.2.18": "He shouldn’t associate inappropriately with other monks. ",
   "pli-tv-kd12:1.2.19": "He should not walk in front of a regular monk. ",
   "pli-tv-kd12:1.2.20": "He should not sit in front of a regular monk. ",
   "pli-tv-kd12:1.2.21": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
