Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -50,11 +50,11 @@
   "pli-tv-kd12:1.2.16": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:1.2.17": "He shouldn’t remind a regular monk of an offense. ",
   "pli-tv-kd12:1.2.18": "He shouldn’t associate inappropriately with other monks. ",
-  "pli-tv-kd12:1.2.19": "He should not walk in front of a regular monk. ",
-  "pli-tv-kd12:1.2.20": "He should not sit in front of a regular monk. ",
-  "pli-tv-kd12:1.2.21": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
-  "pli-tv-kd12:1.2.22": "He should not attend on a regular monk when going to families. ",
-  "pli-tv-kd12:1.2.23": "He should not be attended on by a regular monk when going to families. ",
+  "pli-tv-kd12:1.2.19": "He shouldn’t walk in front of a regular monk. ",
+  "pli-tv-kd12:1.2.20": "He shouldn’t sit in front of a regular monk. ",
+  "pli-tv-kd12:1.2.21": "He should be given the last seat, the last bed, and the last dwelling of the Sangha, and he should consent to that. ",
+  "pli-tv-kd12:1.2.22": "He shouldn’t attend on a regular monk when going to families. ",
+  "pli-tv-kd12:1.2.23": "He shouldn’t be attended on by a regular monk when going to families. ",
   "pli-tv-kd12:1.2.24": "He should not undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:1.2.25": "He should not undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:1.2.26": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
