--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -58,7 +58,7 @@
   "pli-tv-kd12:1.2.24": "He shouldn’t undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:1.2.25": "He shouldn’t undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:1.2.26": "He shouldn’t have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
-  "pli-tv-kd12:1.2.27": "He should inform about his status when he is newly arrived in a monastery. ",
+  "pli-tv-kd12:1.2.27": "He should inform about his status when he’s newly arrived in a monastery. ",
   "pli-tv-kd12:1.2.28": "He should inform new arrivals of his status. ",
   "pli-tv-kd12:1.2.29": "He should inform about his status on the observance day. ",
   "pli-tv-kd12:1.2.30": "He should inform about his status on the invitation day. ",
