--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -64,12 +64,12 @@
   "pli-tv-kd12:1.2.30": "He should inform about his status on the invitation day. ",
   "pli-tv-kd12:1.2.31": "If he’s sick, he should inform about his status by messenger. ",
   "pli-tv-kd12:1.3.1": "He shouldn’t go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.2": "He should not go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.3": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.4": "He should not go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.5": "He should not go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.6": "He should not go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.7": "He should not go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.2": "He shouldn’t go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.3": "He shouldn’t go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.4": "He shouldn’t go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.5": "He shouldn’t go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.6": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.7": "He shouldn’t go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.8": "He should not go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.9": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.10": "He should not go from a monastery with monks to one with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
