--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -71,7 +71,7 @@
   "pli-tv-kd12:1.3.6": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.7": "He shouldn’t go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.8": "He shouldn’t go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:1.3.9": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:1.3.9": "He shouldn’t go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.10": "He should not go from a monastery with monks to one with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.11": "He should not go from a monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:1.3.12": "He should not go from a monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
