Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -90,14 +90,14 @@
   "pli-tv-kd12:1.3.25": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:1.3.26": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:1.3.27": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:1.4.1": "He should not, in a monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:1.4.2": "He should not, in a non-monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:1.4.3": "He should not, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:1.4.1": "He shouldn’t, in a monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:1.4.2": "He shouldn’t, in a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:1.4.3": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:1.4.4": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:1.4.5": "He should offer a seat to a regular monk. ",
-  "pli-tv-kd12:1.4.6": "He should not sit on the same seat as a regular monk. ",
-  "pli-tv-kd12:1.4.7": "He should not sit on a higher seat than a regular monk. ",
-  "pli-tv-kd12:1.4.8": "He should not sit on a seat when a regular monk is sitting on the ground. ",
+  "pli-tv-kd12:1.4.6": "He shouldn’t sit on the same seat as a regular monk. ",
+  "pli-tv-kd12:1.4.7": "He shouldn’t sit on a higher seat than a regular monk. ",
+  "pli-tv-kd12:1.4.8": "He shouldn’t sit on a seat when a regular monk is sitting on the ground. ",
   "pli-tv-kd12:1.4.9": "He should not do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:1.4.10": "He should not do walking meditation on a higher walking path than a regular monk. ",
   "pli-tv-kd12:1.4.11": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
