--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -98,9 +98,9 @@
   "pli-tv-kd12:1.4.6": "He shouldn’t sit on the same seat as a regular monk. ",
   "pli-tv-kd12:1.4.7": "He shouldn’t sit on a higher seat than a regular monk. ",
   "pli-tv-kd12:1.4.8": "He shouldn’t sit on a seat when a regular monk is sitting on the ground. ",
-  "pli-tv-kd12:1.4.9": "He should not do walking meditation on the same walking path as a regular monk. ",
-  "pli-tv-kd12:1.4.10": "He should not do walking meditation on a higher walking path than a regular monk. ",
-  "pli-tv-kd12:1.4.11": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
+  "pli-tv-kd12:1.4.9": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
+  "pli-tv-kd12:1.4.10": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
+  "pli-tv-kd12:1.4.11": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:1.4.12": "He should not, in a monastery, stay in the same room as a more senior monk on probation. … ",
   "pli-tv-kd12:1.4.13": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:1.4.14": "He should not, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
