Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -101,10 +101,10 @@
   "pli-tv-kd12:1.4.9": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:1.4.10": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
   "pli-tv-kd12:1.4.11": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
-  "pli-tv-kd12:1.4.12": "He should not, in a monastery, stay in the same room as a more senior monk on probation. … ",
-  "pli-tv-kd12:1.4.13": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:1.4.14": "He should not, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
-  "pli-tv-kd12:1.4.15": "He should not, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
+  "pli-tv-kd12:1.4.12": "He shouldn’t, in a monastery, stay in the same room as a more senior monk on probation. … ",
+  "pli-tv-kd12:1.4.13": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
+  "pli-tv-kd12:1.4.14": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:1.4.15": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:1.4.16": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.17": "He should not, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.18": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
