--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -105,8 +105,8 @@
   "pli-tv-kd12:1.4.13": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:1.4.14": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
   "pli-tv-kd12:1.4.15": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
-  "pli-tv-kd12:1.4.16": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.17": "He should not, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.16": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.17": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.18": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.19": "He should not sit on the same seat as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.20": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
