Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -107,10 +107,10 @@
   "pli-tv-kd12:1.4.15": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:1.4.16": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.17": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.18": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.19": "He should not sit on the same seat as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.20": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.21": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
+  "pli-tv-kd12:1.4.18": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.19": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.20": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.21": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:1.4.22": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.23": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.24": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
