--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -111,9 +111,9 @@
   "pli-tv-kd12:1.4.19": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.20": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.21": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
-  "pli-tv-kd12:1.4.22": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.23": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:1.4.24": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
+  "pli-tv-kd12:1.4.22": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.23": "He shouldn’t do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:1.4.24": "He shouldn’t do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:1.4.25": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:1.4.26": "sends back to the beginning, ",
   "pli-tv-kd12:1.4.27": "or gives the trial period, ",
