--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -126,7 +126,7 @@
   "pli-tv-kd12:2.1.5": "“There are three such things, Upāli: ",
   "pli-tv-kd12:2.1.6": "he stays in the same room as a regular monk; he stays apart from other monks; he doesn’t inform other monks of his status.” ",
   "pli-tv-kd12:3.1.1": "On one occasion a large sangha of monks had gathered at Sāvatthī. ",
-  "pli-tv-kd12:3.1.2": "The monks on probation were not able to fulfill their probationary duties. ",
+  "pli-tv-kd12:3.1.2": "The monks on probation were unable to fulfill their probationary duties. ",
   "pli-tv-kd12:3.1.3": "They told the Buddha. ",
   "pli-tv-kd12:3.1.4": "“I allow you to set aside the probation. ",
   "pli-tv-kd12:3.1.5": "And it should be done like this. ",
