Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -134,7 +134,7 @@
   "pli-tv-kd12:3.1.7": "‘I set aside the probation,’ ",
   "pli-tv-kd12:3.1.9": "or ‘I set aside the proper conduct.’” ",
   "pli-tv-kd12:3.2.1": "Soon afterwards the monks at Sāvatthī left for various destinations. ",
-  "pli-tv-kd12:3.2.2": "The monks on probation were again able to fulfill their probationary duties. ",
+  "pli-tv-kd12:3.2.2": "The monks on probation were once again able to fulfill their probationary duties. ",
   "pli-tv-kd12:3.2.3": "They told the Buddha. ",
   "pli-tv-kd12:3.2.4": "“I allow you to take up the probation. ",
   "pli-tv-kd12:3.2.5": "And it should be done like this. ",
