--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -141,7 +141,7 @@
   "pli-tv-kd12:3.2.6": "The monk on probation should approach a monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd12:3.2.7": "‘I take up the probation,’ ",
   "pli-tv-kd12:3.2.9": "or ‘I take up the proper conduct.’” ",
-  "pli-tv-kd12:3.2.11": "The proper conduct of those on probation is finished. ",
+  "pli-tv-kd12:3.2.11": "The proper conduct for those on probation is finished. ",
   "pli-tv-kd12:4.1.0": "2. The proper conduct of those deserving to be sent back to the beginning ",
   "pli-tv-kd12:4.1.1": "At this time monks deserving to be sent back to the beginning consented to regular monks bowing down to them, standing up for them, raising their joined palms to them, doing acts of respect toward them, offering them a seat, offering them a bed, offering them water for washing their feet and a foot stool, offering them a foot scraper, receiving their bowl and robe, and massaging their backs when bathing. ",
   "pli-tv-kd12:4.1.2": "The monks of few desires complained and criticized them, ",
