Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -787,7 +787,7 @@
   "pli-tv-kd20:20.1.9": "A nun should not direct a monk. ",
   "pli-tv-kd20:20.1.10": "If she does, it’s not actually done, ",
   "pli-tv-kd20:20.1.11": "and she commits an offense of wrong conduct. ",
-  "pli-tv-kd20:20.1.12": "A nun should not make accusations against a monk. ",
+  "pli-tv-kd20:20.1.12": "A nun should not give instructions to a monk. ",
   "pli-tv-kd20:20.1.13": "If she does, it’s not actually done, ",
   "pli-tv-kd20:20.1.14": "and she commits an offense of wrong conduct. ",
   "pli-tv-kd20:20.1.15": "A nun should not get permission from a monk to correct him. ",
