--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -810,7 +810,7 @@
   "pli-tv-kd20:20.1.32": "A monk may direct a nun. ",
   "pli-tv-kd20:20.1.33": "If he does, it is properly done, ",
   "pli-tv-kd20:20.1.34": "and there is no offense for him. ",
-  "pli-tv-kd20:20.1.35": "A monk may make accusations against a nun. ",
+  "pli-tv-kd20:20.1.35": "A monk may give instructions to a nun. ",
   "pli-tv-kd20:20.1.36": "If he does, it is properly done, ",
   "pli-tv-kd20:20.1.37": "and there is no offense for him. ",
   "pli-tv-kd20:20.1.38": "A monk may get permission from a nun to correct her. ",
