Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -799,7 +799,7 @@
   "pli-tv-kd20:20.1.21": "A nun should not remind a monk of an offense. ",
   "pli-tv-kd20:20.1.22": "If she does, it’s not actually done, ",
   "pli-tv-kd20:20.1.23": "and she commits an offense of wrong conduct.” ",
-  "pli-tv-kd20:20.1.24": "At that time the monks canceled the nuns’ observance-day ceremony and their invitation ceremony; they directed them, instructed them, got permission from them to correct them, accused them of offenses, and reminded them of offenses. ",
+  "pli-tv-kd20:20.1.24": "At that time the monks canceled the nuns’ observance-day ceremony and their invitation ceremony; they directed them, gave them instructions, got permission from them to correct them, accused them of offenses, and reminded them of offenses. ",
   "pli-tv-kd20:20.1.25": "They told the Buddha. ",
   "pli-tv-kd20:20.1.26": "“A monk may cancel the observance-day ceremony of a nun. ",
   "pli-tv-kd20:20.1.27": "If he cancels it, it is properly canceled, ",
