Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
@@ -22,7 +22,7 @@
   "pli-tv-bu-vb-np10:1.1.17": "Later on that government official sent a message to Upananda, saying, ",
   "pli-tv-bu-vb-np10:1.1.18": "“Please use the robe-cloth. I would like you to use the robe-cloth.” ",
   "pli-tv-bu-vb-np10:1.1.19": "When Upananda did not say anything to that lay follower, ",
-  "pli-tv-bu-vb-np10:1.1.20": "The government official sent the same message a second time, ",
+  "pli-tv-bu-vb-np10:1.1.20": "that government official sent him a second message, saying, “Please use the robe-cloth. I would like you to use the robe-cloth.” ",
   "pli-tv-bu-vb-np10:1.1.22": "but again Upananda did not reply. ",
   "pli-tv-bu-vb-np10:1.1.23": "The government official then sent the message a third time. ",
   "pli-tv-bu-vb-np10:1.2.1": "",
