--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
@@ -24,7 +24,7 @@
   "pli-tv-bu-vb-np10:1.1.19": "When Upananda did not say anything to that lay follower, ",
   "pli-tv-bu-vb-np10:1.1.20": "that government official sent him a second message, saying, ",
   "pli-tv-bu-vb-np10:1.1.21": "“Please use the robe-cloth. I would like you to use the robe-cloth.” ",
-  "pli-tv-bu-vb-np10:1.1.22": "but again Upananda did not reply. ",
+  "pli-tv-bu-vb-np10:1.1.22": "When Upananda still did not say anything to that lay follower, ",
   "pli-tv-bu-vb-np10:1.1.23": "The government official then sent the message a third time. ",
   "pli-tv-bu-vb-np10:1.2.1": "",
   "pli-tv-bu-vb-np10:1.2.2": "At that time the householder association had made an agreement that whoever came late to a meeting would be fined fifty coins. And now they were having a meeting. ",
