Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json
@@ -49,7 +49,7 @@
   "pli-tv-bu-vb-np20:2.5": "Various ways: ",
   "pli-tv-bu-vb-np20:2.6": "robes, almsfood, a dwelling, or medicinal supplies; even a bit of bath powder, a tooth cleaner, or a piece of string. ",
   "pli-tv-bu-vb-np20:2.7": "Barters: ",
-  "pli-tv-bu-vb-np20:2.8": "if he misbehaves, saying, “Give that for this,” “Bring that for this,” “Swap that with this,” “Exchange that for this,” he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-np20:2.8": "if he misbehaves, saying, “Give that for this,” “Bring that for this,” “Trade that with this,” “Exchange that for this,” he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-np20:2.9": "When it has been bartered—his own goods are in the hands of the other and the other’s goods are in his own hands—it becomes subject to relinquishment. ",
   "pli-tv-bu-vb-np20:2.10": "The goods should be relinquished to a sangha, a group, or an individual. ",
   "pli-tv-bu-vb-np20:2.11": "“And, monks, they should be relinquished like this. ",
