Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
@@ -106,7 +106,7 @@
   "pli-tv-bu-vb-np10:2.1.24": "“Is there anyone who provides services for you?” ",
   "pli-tv-bu-vb-np10:2.1.25": "the monk, if he needs robe-cloth, should point out a monastery worker or a lay follower and say, ",
   "pli-tv-bu-vb-np10:2.1.26": "“He provides services for the monks”: ",
-  "pli-tv-bu-vb-np10:2.1.27": "he should not say, “Give it to him,” “He’ll put it aside,” “He’ll do the swap,” “He’ll buy it.” ",
+  "pli-tv-bu-vb-np10:2.1.27": "he should not say, “Give it to him,” “He’ll put it aside,” “He’ll trade it,” “He’ll buy it.” ",
   "pli-tv-bu-vb-np10:2.1.28": "If the messenger instructs that service-provider and then returns to the monk and says, ",
   "pli-tv-bu-vb-np10:2.1.29": "“Venerable, I have instructed the service-provider you pointed out. Please go to him at the right time and he’ll give you robe-cloth,” ",
   "pli-tv-bu-vb-np10:2.1.30": "then, if that monk needs robe-cloth, he should go to that service-provider and prompt him and remind him two or three times, saying, ",
