--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np8_translation-en-brahmali.json
@@ -56,7 +56,7 @@
   "pli-tv-bu-vb-np8:2.1.11": "With this robe fund: ",
   "pli-tv-bu-vb-np8:2.1.12": "with that which is at one’s disposal. ",
   "pli-tv-bu-vb-np8:2.1.13": "I will buy: ",
-  "pli-tv-bu-vb-np8:2.1.14": "having swapped. ",
+  "pli-tv-bu-vb-np8:2.1.14": "having traded. ",
   "pli-tv-bu-vb-np8:2.1.15": "I will give: ",
   "pli-tv-bu-vb-np8:2.1.16": "I will donate. ",
   "pli-tv-bu-vb-np8:2.1.17": "If that monk: ",
