--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np8_translation-en-brahmali.json
@@ -72,7 +72,7 @@
   "pli-tv-bu-vb-np8:2.1.27": "Such-and-such: ",
   "pli-tv-bu-vb-np8:2.1.28": "long or wide or closely woven or soft. ",
   "pli-tv-bu-vb-np8:2.1.29": "To buy: ",
-  "pli-tv-bu-vb-np8:2.1.30": "having swapped. ",
+  "pli-tv-bu-vb-np8:2.1.30": "having traded. ",
   "pli-tv-bu-vb-np8:2.1.31": "Give: ",
   "pli-tv-bu-vb-np8:2.1.32": "donate. ",
   "pli-tv-bu-vb-np8:2.1.33": "Because he wants something fine: ",
