--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np9_translation-en-brahmali.json
@@ -60,7 +60,7 @@
   "pli-tv-bu-vb-np9:2.13": "With these separate robe funds: ",
   "pli-tv-bu-vb-np9:2.14": "with that which is at their disposal. ",
   "pli-tv-bu-vb-np9:2.15": "We’ll buy: ",
-  "pli-tv-bu-vb-np9:2.16": "having swapped. ",
+  "pli-tv-bu-vb-np9:2.16": "having traded. ",
   "pli-tv-bu-vb-np9:2.17": "We’ll give: ",
   "pli-tv-bu-vb-np9:2.18": "we’ll donate. ",
   "pli-tv-bu-vb-np9:2.19": "If that monk: ",
