Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np9_translation-en-brahmali.json
@@ -76,7 +76,7 @@
   "pli-tv-bu-vb-np9:2.29": "Such-and-such: ",
   "pli-tv-bu-vb-np9:2.30": "long or wide or closely woven or soft. ",
   "pli-tv-bu-vb-np9:2.31": "To buy: ",
-  "pli-tv-bu-vb-np9:2.32": "having swapped. ",
+  "pli-tv-bu-vb-np9:2.32": "having traded. ",
   "pli-tv-bu-vb-np9:2.33": "Give: ",
   "pli-tv-bu-vb-np9:2.34": "donate. ",
   "pli-tv-bu-vb-np9:2.35": "Put together: ",
