Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np20_translation-en-brahmali.json
@@ -18,7 +18,7 @@
   "pli-tv-bu-vb-np20:1.11": "And the wanderers said to him, ",
   "pli-tv-bu-vb-np20:1.12": "“This upper robe of yours is beautiful. ",
   "pli-tv-bu-vb-np20:1.13": "Where did you get it?” ",
-  "pli-tv-bu-vb-np20:1.14": "“I swapped it for my robe.” ",
+  "pli-tv-bu-vb-np20:1.14": "“I traded it for my robe.” ",
   "pli-tv-bu-vb-np20:1.15": "“But how long will it last? ",
   "pli-tv-bu-vb-np20:1.16": "Your other robe was better.” ",
   "pli-tv-bu-vb-np20:1.17": "The wanderer realized they were right, ",
