Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np10_translation-en-brahmali.json
@@ -95,7 +95,7 @@
   "pli-tv-bu-vb-np10:2.1.13": "With this robe fund: ",
   "pli-tv-bu-vb-np10:2.1.14": "with that which is at one’s disposal. ",
   "pli-tv-bu-vb-np10:2.1.15": "Buy: ",
-  "pli-tv-bu-vb-np10:2.1.16": "having swapped. ",
+  "pli-tv-bu-vb-np10:2.1.16": "having traded. ",
   "pli-tv-bu-vb-np10:2.1.17": "Give: ",
   "pli-tv-bu-vb-np10:2.1.18": "donate. ",
   "pli-tv-bu-vb-np10:2.1.19": "And the messenger goes to that monk and says, ",
