Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -35,7 +35,7 @@
   "pli-tv-bi-vb-np3:2.1.6": "with another nun. ",
   "pli-tv-bi-vb-np3:2.1.7": "Robes: ",
   "pli-tv-bi-vb-np3:2.1.8": "one of the six kinds of robe-cloth, but not smaller than what can be assigned to another. ",
-  "pli-tv-bi-vb-np3:2.1.9": "Swaps: ",
+  "pli-tv-bi-vb-np3:2.1.9": "Trades: ",
   "pli-tv-bi-vb-np3:2.1.10": "much with little or little with much. ",
   "pli-tv-bi-vb-np3:2.1.11": "Just takes it: ",
   "pli-tv-bi-vb-np3:2.1.12": "if she just takes it herself, she commits an offense entailing relinquishment and confession. ",
