--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -54,7 +54,7 @@
   "pli-tv-bi-vb-np3:2.2.2": "If the other person is fully ordained, but she is unsure of it, and after swapping robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-bi-vb-np3:2.2.3": "If the other person is fully ordained, but she does not perceive her as such, and after swapping robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-bi-vb-np3:2.2.4": "If she trades another requisite, and then takes it back or has it taken back, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-np3:2.2.5": "If she swaps robe-cloth or another requisite with someone who is not fully ordained, and then takes it back or has it taken back, she commits an offense of wrong conduct. ",
+  "pli-tv-bi-vb-np3:2.2.5": "If she trades robe-cloth or another requisite with someone who is not fully ordained, and then takes it back or has it taken back, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-np3:2.2.6": "If the other person is not fully ordained, but she perceives her as such, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-np3:2.2.7": "If the other person is not fully ordained, but she is unsure of it, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-np3:2.2.8": "If the other person is not fully ordained, and she does not perceive her as such, she commits an offense of wrong conduct. ",
