Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -15,7 +15,7 @@
   "pli-tv-bi-vb-np3:1.8": "“Here’s your robe and give me that robe of mine. That which is yours is yours and that which is mine is mine. Give me that and take back what’s yours.” And she just took it. ",
   "pli-tv-bi-vb-np3:1.9": "That nun then told the nuns what had happened. ",
   "pli-tv-bi-vb-np3:1.10": "The nuns of few desires complained and criticized her, ",
-  "pli-tv-bi-vb-np3:1.11": "“How could Venerable Thullanandā swap a robe with a nun and then take it back?” ",
+  "pli-tv-bi-vb-np3:1.11": "“How could Venerable Thullanandā trade a robe with a nun and then take it back?” ",
   "pli-tv-bi-vb-np3:1.12": "Those nuns then told the monks, ",
   "pli-tv-bi-vb-np3:1.13": "who in turn told the Buddha. Soon afterwards he had the Sangha gathered and questioned the monks: ",
   "pli-tv-bi-vb-np3:1.14": "“Is it true, monks, that the nun Thullanandā did this?” ",
