--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -21,7 +21,7 @@
   "pli-tv-bi-vb-np3:1.14": "“Is it true, monks, that the nun Thullanandā did this?” ",
   "pli-tv-bi-vb-np3:1.15": "“It’s true, Sir.” ",
   "pli-tv-bi-vb-np3:1.16": "The Buddha rebuked her … ",
-  "pli-tv-bi-vb-np3:1.17": "“How could the nun Thullanandā swap a robe with a nun and then take it back? ",
+  "pli-tv-bi-vb-np3:1.17": "“How could the nun Thullanandā trade a robe with a nun and then take it back? ",
   "pli-tv-bi-vb-np3:1.18": "This will affect people’s confidence …” … ",
   "pli-tv-bi-vb-np3:1.19": "“And, monks, the nuns should recite this training rule like this: ",
   "pli-tv-bi-vb-np3:1.20.0": "Final ruling ",
