--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -3,7 +3,7 @@
   "pli-tv-bi-vb-np3:0.2": "The nuns’ rules and their analysis ",
   "pli-tv-bi-vb-np3:0.3": "The chapter on relinquishment ",
   "pli-tv-bi-vb-np3:0.4": "The sub-chapter on almsbowls ",
-  "pli-tv-bi-vb-np3:0.5": "3. The training rule on swapping robes ",
+  "pli-tv-bi-vb-np3:0.5": "3. The training rule on trading robes ",
   "pli-tv-bi-vb-np3:1.0": "Origin story ",
   "pli-tv-bi-vb-np3:1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
   "pli-tv-bi-vb-np3:1.2": "At that time the nun Thullanandā was using a robe she had received after swapping with another nun. ",
