--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -6,7 +6,7 @@
   "pli-tv-bi-vb-np3:0.5": "3. The training rule on trading robes ",
   "pli-tv-bi-vb-np3:1.0": "Origin story ",
   "pli-tv-bi-vb-np3:1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
-  "pli-tv-bi-vb-np3:1.2": "At that time the nun Thullanandā was using a robe she had received after swapping with another nun. ",
+  "pli-tv-bi-vb-np3:1.2": "At that time the nun Thullanandā was using a robe she had received after trading with another nun. ",
   "pli-tv-bi-vb-np3:1.3": "But the other nun folded up the robe she had received and put it aside. ",
   "pli-tv-bi-vb-np3:1.4": "Thullanandā then said to her, ",
   "pli-tv-bi-vb-np3:1.5": "“Venerable, where’s that robe that I swapped with you?” ",
