Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -9,7 +9,7 @@
   "pli-tv-bi-vb-np3:1.2": "At that time the nun Thullanandā was using a robe she had received after trading with another nun. ",
   "pli-tv-bi-vb-np3:1.3": "But the other nun folded up the robe she had received and put it aside. ",
   "pli-tv-bi-vb-np3:1.4": "Thullanandā then said to her, ",
-  "pli-tv-bi-vb-np3:1.5": "“Venerable, where’s that robe that I swapped with you?” ",
+  "pli-tv-bi-vb-np3:1.5": "“Venerable, where’s that robe that I traded with you?” ",
   "pli-tv-bi-vb-np3:1.6": "She brought out the robe and showed it to her, ",
   "pli-tv-bi-vb-np3:1.7": "and Thullanandā said, ",
   "pli-tv-bi-vb-np3:1.8": "“Here’s your robe and give me that robe of mine. That which is yours is yours and that which is mine is mine. Give me that and take back what’s yours.” And she just took it. ",
