Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
@@ -416,7 +416,7 @@
   "pli-tv-pvr2.1:54.1": "The twelve rules on relinquishment and confession are finished. ",
   "pli-tv-pvr2.1:55.1": "This is the summary: ",
   "pli-tv-pvr2.1:56.1": "“Bowl, out-of-season as in season, ",
-  "pli-tv-pvr2.1:56.2": "Should swap, and should ask; ",
+  "pli-tv-pvr2.1:56.2": "Should trade, and should ask; ",
   "pli-tv-pvr2.1:56.3": "Getting in exchange, a specific purpose, ",
   "pli-tv-pvr2.1:56.4": "And belonging to the Sangha, collective; ",
   "pli-tv-pvr2.1:56.5": "Asked for, personal, ",
