Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
@@ -333,7 +333,7 @@
   "pli-tv-pvr2.1:43.6": "The nun Thullanandā determining out-of-season robe-cloth as “in-season”, and then distributing it. ",
   "pli-tv-pvr2.1:43.7": "There is one rule. ",
   "pli-tv-pvr2.1:43.8": "Of the six kinds of origins of offenses, it originates in three ways: … ",
-  "pli-tv-pvr2.1:44.1": "“The offense entailing relinquishment and confession for swapping a robe with a nun and then taking it back—where was it laid down?” ",
+  "pli-tv-pvr2.1:44.1": "“The offense entailing relinquishment and confession for trading a robe with a nun and then taking it back—where was it laid down?” ",
   "pli-tv-pvr2.1:44.2": "At Sāvatthī. ",
   "pli-tv-pvr2.1:44.3": "“Whom is it about?” ",
   "pli-tv-pvr2.1:44.4": "The nun Thullanandā. ",
