Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -273,7 +273,7 @@
   "pli-tv-kd20:9.3.1": "The monks thought, ",
   "pli-tv-kd20:9.3.2": "“Is it allowable or not to do the observance-day ceremony with a nun whose half-monthly instruction has been canceled?” ",
   "pli-tv-kd20:9.3.3": "They told the Buddha. ",
-  "pli-tv-kd20:9.3.4": "“Until that legal issue has been settled it’s not allowable to do the observance-day ceremony with a nun whose half-monthly instruction has been canceled.” ",
+  "pli-tv-kd20:9.3.4": "“Until that legal issue has been resolved it’s not allowable to do the observance-day ceremony with a nun whose half-monthly instruction has been canceled.” ",
   "pli-tv-kd20:9.3.5": "On one occasion Venerable Udāyī canceled the half-monthly instruction and then set out wandering. ",
   "pli-tv-kd20:9.3.6": "The nuns complained and criticized him, ",
   "pli-tv-kd20:9.3.7": "“How could Venerable Udāyī do this?” ",
